# eardogger-rs

./: .gitignore  Cargo.toml  README.md  backup-example.sh  build.rs  eardogger.example.toml  htaccess-example  release.sh
.sqlx/: query-07015fca7aaf6f54931b20b61e9b27b23c5becae1e4a09a4a2a1364676d194e4.json  query-19cd07e027508cba9c42b0a37ef6cd5b579182855e807b69ed44e416c72aba94.json  query-247340f9fd13209ea76e3af466cb66c88bb43865a77f13b24562a1ff1a9549cc.json  query-27dc19c1166eb9c850c62320b47c7affeff2952d66ac2e0452556e1bd2eb2daa.json  query-29a862a1bb73c6e26b4b920ba4ae139af3be4b8607c31fcec44d687a94cb2ba8.json  query-2ef55b3afce514b8a203665dc93600db2d71229af5b063d3e5de02bef1debb2f.json  query-32e1207614ec8f151deb6524b723a0476e6e3e3be115d6b7d9de9107e3ba84d5.json  query-333e9d3eea28479f3442b58eddc3fcc6238d654f901d466b8353cf993dd047b9.json  query-336da229e3182bc38929376ccf2a0ff5d2f12d5c7f46315b58d05631fbfdd43b.json  query-3646033fa0745f1781ca1084b3a5bfd3e0ca5e8427743bbce399f3bff25d8944.json  query-3ea3cda57d78191266a3756b50a4d77fd35ff180837d4dde1a9db129afcc4499.json  query-3fefe9b8ced636cc4a48785cf1b34e9b17f9d28973fc9aeafd31759c647b1120.json  query-40be5b1f5126cfd1d7b361ec166c2df98ae5046e2249e905946b8004e8c042c6.json  query-563a64fc40ce19c006426869f48197145fbe50b17eaf96dac25a88d50485f96b.json  query-5678015ab53f2d55ac23e9457b785b5761bbf38e5d2bdc7583d0749cd0e1a3e5.json  query-5a77e58d8361bdac0e09adb7c6b220beb699c7a00679da3664b8b5495f0491f2.json  query-5d9720a61d6f8fc748fbf5886b0e03bf531c486ed3147086e9c256cb002ddf86.json  query-6827264c831f6d4eca8e20c1cb8d040a726944934cd738d329a3a1a7e2afe3c3.json  query-689561601b57d74af29b9657415abe572a3aee27cf76a32044943e97f7fc26dc.json  query-6910898342034195fbd8c37dff7c62dbeb7769e43705d66b23fda5e13ed1df1a.json  query-6e683ee17ef4b023e7f53098703dbb3a02922816662e5b887e2748001c5a3363.json  query-7bda31bfe7ac9c1a6e909554a65c8f41aa91c582b28e80c1181994a5552e796f.json  query-801a10f5c64c80d4057edaee735922b1dc2b2331104f001da4de16ceb04e29c0.json  query-828b374087ae8ab507f82aae6b3c8e6671d041891e602052b3149018eab9de54.json  query-8592b662b807612323610b51e290d8c1bdbbdde460a0cc856b44c84e0692fd74.json  query-8cfaf4fdadb6b4ad316ba4b77f2e471d4edcdc7d003de65186d078cde60e63b6.json  query-8d91e54e2160a9c1a113ae6987905915004580f7537d3b7279b9562ca4ca19fe.json  query-98a7896177a09ccb7d7ae3948c83b8f6b0d2ec8aba9e6529c115de96fc4746a1.json  query-aa5a1ecb87b46ce6c0e7e7a56ac598fb7c2aa0455fc271430a5d935f013313b4.json  query-d0bfd145ce2e95f3f996ef69796be457cda505a8ef070c76938bfafdb2b14b4e.json  query-d69e7bcf959e3a4d7831e5f3388841edec510d179805f159fbb6187e2ec94775.json  query-e365d002c86ea2a385ecadbbeca0d650f4a2eae7eeac1f6903a4cc74a5e5f057.json  query-e4d3e872179002281c91015e5b80403443b54ca5d953a2229debeddee86f926d.json  query-f7e1b0b31e002b1c3d2083cd3411806edeec03ee387af3a8fc16765a6fc128b1.json  query-fa2b8dbf936017e94294efc0c2deaae6b44b7df50990434fd253bf59d4fe1ab7.json
bookmarklets/: mark.js.j2  where.js.j2
migrations/: 20240312034918_create-user-and-auth-tables.down.sql  20240312034918_create-user-and-auth-tables.up.sql  20240315170914_create-dogears-table.down.sql  20240315170914_create-dogears-table.up.sql  20240519014927_add-user_agent-to-session.down.sql  20240519014927_add-user_agent-to-session.up.sql
public/: client.js  style.css
src/: args.rs  config.rs  main.rs  version.rs
src/app/: app_tests.rs  authentication.rs  mod.rs  routes.rs  state.rs  templates.rs  web_result.rs
src/app/app_tests/: api.rs  mod.rs  web.rs
src/db/: auth_tests.rs  core.rs  db_tests.rs  dogears.rs  migrations.rs  mod.rs  sessions.rs  tokens.rs  users.rs
src/util/: bookmarklets.rs  error.rs  mod.rs  url_encoding.rs
templates/: _error.html  _layout.html.j2  account.html.j2  create.html.j2  error.html.j2  faq.html.j2  fragment.dogears.html.j2  fragment.personalmark.html.j2  fragment.sessions.html.j2  fragment.tokens.html.j2  index.html.j2  install.html.j2  login.html.j2  macro.bookmarklet.html.j2  macro.pagination.html.j2  marked.html.j2
