[package]
name = "eardogger-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Foundations:
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
tower = "0.4.13"
serde_json = "1.0.115"
anyhow = "1.0.79"
thiserror = "1.0.58"
tracing = "0.1.40"
serde = { version = "1", features = ["derive"] }
regex = "1.10.3"
lazy_static = "1.4.0"

# Database:
sqlx = { version = "0.7.4", features = [
    "sqlite",
    "runtime-tokio",
    "tls-rustls",
    "time",
] }
time = { version = "0.3.34", features = ["serde"] }

# Crypto/randomness/hashing/etc:
rand = "0.8.5"
bcrypt = "0.15.0"
sha2 = "0.10.8"
base16ct = { version = "0.2.0", features = ["std", "alloc"] }
uuid = { version = "1.7.0", features = ["v4"] }

# Website:
axum = { version = "0.7.4" }
http = "1.1.0"
tower-cookies = { version = "0.10.0", features = ["axum-core", "signed"] }
tower-http = { version = "0.5.2", features = ["fs"] }
busride-rs = { git = "https://github.com/nfagerlund/busride-rs", rev = "ce669be" }
minijinja = { version = "1.0.12", features = ["json"] }
url = "2.5.0"
html-escape = "0.2.13"
percent-encoding = "2.3.1"

# Clean-up:
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
toml = "0.8.12"
tracing-appender = "0.2.3"
