[package]
name = "eardogger-rs"
version = "2.0.0"
edition = "2021"
default-run = "eardogger-rs"

# Per the sqlx readme: the macros are hefty, so speeding them up
# in dev builds can have noticable effects. Note that cargo's `test`
# profile inherits from `dev`.
[profile.dev.package.sqlx-macros]
opt-level = 2

[dependencies]
# Runtime foundations:
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
futures-util = "0.3.30"
tower = "0.4.13"
busride-rs = { git = "https://github.com/nfagerlund/busride-rs", rev = "dd2f88f" }

# Serialization/formats/parsing:
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.115"
toml = "0.8.12"
url = "2.5.0"
html-escape = "0.2.13"
percent-encoding = "2.3.1"

# Utility stuff:
anyhow = "1.0.79"
thiserror = "1.0.58"
regex = "1.10.3"
lazy_static = "1.4.0"
time = { version = "0.3.36", features = ["serde"] }

# Tracing:
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"

# Database:
sqlx = { version = "0.7.4", features = [
    "sqlite",
    "runtime-tokio",
    "tls-rustls",
    "time",
] }

# Crypto/randomness/hashing/etc:
rand = "0.8.5"
bcrypt = "0.15.0"
sha2 = "0.10.8"
base16ct = { version = "0.2.0", features = ["std", "alloc"] }
uuid = { version = "1.7.0", features = ["v4"] }

# Website:
axum = { version = "0.7.4", features = ["macros"] }
http = "1.1.0"
tower-cookies = { version = "0.10.0", features = ["axum-core", "signed"] }
tower-http = { version = "0.5.2", features = ["fs"] }
minijinja = { version = "1.0.12", features = ["json"] }

[dev-dependencies]
scraper = "0.19.0"

[features]
postgres-import = ["sqlx/postgres"]

[[bin]]
name = "postgres-import"
required-features = ["postgres-import"]

# Patch for tracing-appender: 0.2.3 + private fix for tracing#2937 + knock out a
# path dep so it plays nice w/ published versions of tracing-subscriber.
# (branch: nf/jun24-inital-prune)
[patch.crates-io]
tracing-appender = { git = "https://github.com/nfagerlund/tracing.git", rev = "734dde11" }
